--- a/.github/workflows/foo.yaml
+++ b/.github/workflows/foo.yaml
@@ -16,7 +16,7 @@ jobs:
       run: |
         curl -Lo ./crun https://github.com/containers/crun/releases/download/1.14.3/crun-1.14.3-linux-amd64
         GOOD_SHA=e217dfe816ed1af90f3ae923a84303e20b34f41bf68a236d9e506ba481b8d274
-        OUR_SHA=$(sha256sum gh.deb | awk '{ print $1 }')
+        OUR_SHA=$(sha256sum crun | awk '{ print $1 }')
         if [ "$GOOD_SHA" == "$OUR_SHA" ]; then
             sudo install crun /usr/bin/crun
         else
